--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "lib": "lib",
     "test": "test"
   },
+  "engines": {
+    "node": "8.9.4",
+    "npm": "6.9.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "webpack --mode=production",
