--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ bundle.js.map
 .byebug_history
 .DS_Store
 npm-debug.log
+# Ignore master key for decrypting credentials and more.
+/config/master.key
