--- a/config/database.yml
+++ b/config/database.yml
@@ -23,8 +23,11 @@ default: &default
 
 development:
   <<: *default
-  database: somethingSpecial_development
-
+  database: somethingspecial_development
+  username: somethingspecial
+  password: valery
+  url: postgresql://35.199.191.187:5432/
+  
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -57,7 +60,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: somethingSpecial_test
+  database: somethingspecial_test
+  username: somethingspecial
+  password: valery
+  url: postgresql://35.199.191.187:5432/
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +86,7 @@ test:
 #
 production:
   <<: *default
-  database: somethingSpecial_production
-  username: somethingSpecial
-  password: <%= ENV['SOMETHINGSPECIAL_DATABASE_PASSWORD'] %>
+  database: somethingspecial_production
+  username: somethingspecial
+  password: valery
+  url: postgresql://35.199.191.187:5432/
