change ingress manifest file

--- a/ss-helm/templates/ingress.yaml
+++ b/ss-helm/templates/ingress.yaml
@@ -3,14 +3,13 @@ kind: Ingress
 metadata:
   name: ss-ingress
   annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
     kubernetes.io/ingress.global-static-ip-name: vtn-ss-reserved-1
 
 spec:
   rules:
   - http:
       paths:
-      - path: /*
+      - path: /
         backend:
           serviceName: somethingspecial-service
           servicePort: 3000
