change ingress manifest

--- a/ss-helm/templates/ingress.yaml
+++ b/ss-helm/templates/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: ss-ingress
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
+    kubernetes.io/ingress.global-static-ip-name: vtn-ss-reserved
 spec:
   rules:
   - http:
