--- a/ss-helm/templates/k8s.yaml
+++ b/ss-helm/templates/k8s.yaml
@@ -37,4 +37,5 @@ spec:
       name: http
       port: 3000
       targetPort: 3000
-  type: NodePort
+  type: LoadBalancer
+  loadBalancerIP: "35.244.156.126"
