--- a/ss-helm/templates/k8s.yaml
+++ b/ss-helm/templates/k8s.yaml
@@ -37,6 +37,6 @@ spec:
       name: http
       port: 3000
       targetPort: 3000
-  type: NodePort
+  type: LoadBalancer
   externalIPs:
    - 34.82.175.102
