--- a/ss-helm/templates/k8s.yaml
+++ b/ss-helm/templates/k8s.yaml
@@ -37,9 +37,4 @@ spec:
       name: http
       port: 3000
       targetPort: 3000
-    - protocol: TCP
-      name: psql
-      port: 5432
-      targetPort: 5432
-  type: LoadBalancer
-  loadBalancerIP: "34.82.175.102"
+  type: NodePort
