--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ development:
   database: somethingspecial_development
   username: somethingspecial
   password: valery
-  url: postgresql://10.49.32.3:5432/
+  url: <%= ENV['DATABASE_URL'] %>
   
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -63,7 +63,7 @@ test:
   database: somethingspecial_test
   username: somethingspecial
   password: valery
-  url: postgresql://10.49.32.3:5432/
+  url: <%= ENV['DATABASE_URL'] %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,10 +83,10 @@ test:
 #
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
-#
+#     url: postgresql://10.49.32.3:5432/
 production:
   <<: *default
   database: somethingspecial_production
   username: somethingspecial
   password: valery
-  url: postgresql://10.49.32.3:5432/
+  url: <%= ENV['DATABASE_URL'] %>
