--- a/ss-helm/values.yaml
+++ b/ss-helm/values.yaml
@@ -1,1 +1,3 @@
 scale: 1
+ss_image: "gcr.io/somethingspecial-256820/somethingspecial@sha256:43be054e30281cae70e64370026280af916019550aaa1c9bb61ebbb9f2cc7cea"
+DATABASE_URL: "postgresql://10.49.32.3:5432/"
